will this stop the code chunk wrapping?

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -63,6 +63,8 @@ code {
 }
  pre code {
    white-space: pre;
+   word-break: unset;
+   word-wrap: unset;
  }
  pre {
    overflow-x: auto;
